--- a/trunk/gui/SNAP.Util/SNAP.Util.csproj
+++ b/trunk/gui/SNAP.Util/SNAP.Util.csproj
@@ -4,55 +4,37 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A37E3B59-8BA4-4B6E-BB3B-EC0CCF9F1150}</ProjectGuid>
+    <ProjectGuid>{00616E92-3691-4A53-A7AF-58E81890E7F6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SNAP.Core</RootNamespace>
-    <AssemblyName>SNAP.Core</AssemblyName>
+    <RootNamespace>SNAP.Util</RootNamespace>
+    <AssemblyName>SNAP.Util</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calc.cs" />
-    <Compile Include="Controller.cs" />
-    <Compile Include="Jobs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.cs" />
-    <Compile Include="XMLResourceType.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="SNAP.RedirectionHelper.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="SNAP.ScriptHelper.bat" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SNAP.Util\SNAP.Util.csproj">
-      <Project>{00616E92-3691-4A53-A7AF-58E81890E7F6}</Project>
-      <Name>SNAP.Util</Name>
-    </ProjectReference>
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
