--- a/trunk/gui/Shell/SNAP.csproj
+++ b/trunk/gui/Shell/SNAP.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -74,6 +76,18 @@
     <Compile Include="FamiliesForm.Designer.cs">
       <DependentUpon>FamiliesForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ResourceTypeEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResourceTypeEditorForm.Designer.cs">
+      <DependentUpon>ResourceTypeEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="RunProcessForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +126,14 @@
     <EmbeddedResource Include="FamiliesForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FamiliesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResourceTypeEditorForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ResourceTypeEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RunProcessForm.resx">
       <SubType>Designer</SubType>
@@ -189,4 +211,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
