--- a/trunk/gui/Core/SNAP.Core.csproj
+++ b/trunk/gui/Core/SNAP.Core.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calc.cs" />
+    <Compile Include="Conditional.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="EnumField.cs" />
     <Compile Include="Exceptions.cs" />
