--- a/trunk/gui/Core/SNAP.Core.csproj
+++ b/trunk/gui/Core/SNAP.Core.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Calc.cs" />
     <Compile Include="Conditional.cs" />
+    <Compile Include="ConditionalStep.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="EnumField.cs" />
     <Compile Include="Exceptions.cs" />
@@ -46,6 +47,7 @@
     <Compile Include="Jobs.cs" />
     <Compile Include="NumericField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XMLResourceFactory.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="TextField.cs" />
     <Compile Include="XMLResourceType.cs" />
